     (e.g. begin stopping heavy services) even while `upsmon` waits for the
     secondaries to complete their shutdowns and log out of the `upsd` data
     server. [issue #3003, PR #3110]
   * Tickle service watchdog timer (if any) so the `nut-monitor.service` or
     equivalent unit is not killed off due to quietness during shutdown. [#3003]
+
NOTE: If using `upssched` and monitoring multiple UPSes, consider setting up
a `START-TIMER-SHARED` rule with a short (approx. 1 second) timeout to group
several `FSD` notifications into one executed action. [PR #3097]

 - `upssched` tool updates:
   * Previously in PR #2896 (NUT releases v2.8.3 and v2.8.4) the `UPSNAME` and
     `NOTIFYTYPE` environment variables were neutered for the timer daemon,
     since their values at the moment it first started were irrelevant when
     actual timers fired. Lack of those values was however also against the
     documented expectations. Now the values set when the `upssched` client
     is called and ends up updating the timer daemon would be passed into
     the timer. Also a `START-TIMER-SHARED` operation was added, to track a
     single named timer for possibly many devices and/or event types -- in
     this case they would be comma-separated in the environment variable
     values. [issue #3092, PR #3097]
   * The `CANCEL-TIMER` action no longer stops at first hit for the timer name,
     but goes on (in case there are duplicates). A new `CANCEL-TIMER-MATCHED`
     was added, which also cares to match `UPSNAME` and `NOTIFYTYPE` values
     (if passed). [#3097]
   * Introduced support for `DEBUG_MIN` setting via `upssched.conf`. [#3097]
   * Introduced `upssched -l` mode to list currently tracked timers. [#3097]
   * Make use of `setproctag()` and `getproctag()` to report parent/child
     process names. [#3084]
   * Introduced optional passing of `NOTIFYMSG` text (normally originating
     from `upsmon` which calls `upssched`) as an environment variable into